<resources>
    <string name="str_moments">朋友圈</string>
    <string name="str_praise"> 赞 </string>
    <string name="str_reply">评论</string>
    <string name="str_update_moments_bg">轻触设置相册封面</string>
    <string name="str_moments_new_msg_count">%d条新消息</string>
    <string name="str_dynmaic_copy">复制</string>
    <string name="str_dynmaic_collect">收藏</string>
    <string name="copyed">已复制</string>
    <string name="str_moments_reply">回复</string>
    <string name="photograph">拍照</string>
    <string name="change_conver">更换相册封面</string>
    <string name="choose_by_album">从相册中选择</string>
    <string name="video_img">相片或视频</string>
    <string name="hint_publish_moments">这一刻的想法…</string>
    <string name="str_moments_aite">提醒谁看</string>
    <string name="str_moments_shield">谁可以看</string>
    <string name="publish_signle_text">发表文字</string>
    <string name="choose_location">所在位置</string>
    <string name="delete_img">删除图片</string>
    <string name="delete_img_tips">确定删除该图片吗？</string>
    <string name="delete_video_tips">确定删除该视频吗？</string>
    <string name="full_text">全文</string>
    <string name="put_it_away">收起</string>
    <string name="detail_moments">详情</string>
    <string name="moments_delete">删除</string>
    <string name="delete_moments_tips">确定删除本条朋友圈？</string>
    <string name="visible_range">谁可以看</string>
    <string name="moments_public">公开</string>
    <string name="moments_public_desc">所有朋友可见</string>
    <string name="moments_private">私有</string>
    <string name="moments_private_desc">仅自己可见</string>
    <string name="moments_partially_visible">部分可见</string>
    <string name="moments_partially_visible_desc">选中的朋友可见</string>
    <string name="choose_by_maillist">从通讯录选择</string>
    <string name="moments_invisible">不给谁看</string>
    <string name="moments_invisible_user">谁不可看</string>
    <string name="moments_invisible_desc">选中的朋友不可见</string>
    <string name="moments_reply">评论</string>
    <string name="str_moments_reply_user">回复%s：</string>
    <string name="str_moment_delete_reply">确定删除该评论吗？</string>
    <string name="moments_publishing">发布中</string>
    <string name="moments_no_content_tips">请输入发布内容</string>
    <string name="moments_clear">清空</string>
    <string name="comments_clear_tips">确定清空所有消息？</string>
    <string name="moment_upload_bg_err">上传封面失败</string>
    <string name="moment_msg">消息</string>
    <string name="moment_file_uploading">文件上传中</string>
    <string name="moment_file_upload_fail">文件上传失败</string>
    <string name="me">我和</string>
    <string name="mentioned">提到了：%s</string>
    <string name="moment_prohibit">不可见的朋友</string>
    <string name="moment_internal">可见的朋友</string>
    <string name="moment_remind">提到了你</string>
    <string name="moment_remind_u">提到了我</string>
    <string name="moment_forward">发给朋友</string>
    <string name="moment_history">朋友圈和状态</string>
    <string name="hide_my">不让他看我</string>
    <string name="hide_his">不看他</string>
    <string name="can_not_choose_reminder">可见范围选择私密时，此功能不可使用</string>
    <string name="moment_setting">朋友圈和状态</string>
    <string name="delete_comment">此条评论已删除</string>
    <string name="moment_cover">封面</string>
    <string name="delete_comment_title">删除评论</string>
    <string name="clear_moment_messages">清除消息</string>
    <string name="delete_video">删除视频</string>
</resources>
