<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/homeColor"
    android:orientation="vertical">

    <include layout="@layout/wk_title_bar_layout" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/homeColor"
        android:fillViewport="true"
        android:paddingTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/homeColor"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/screen_bg"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/publicLayout"
                    style="@style/layoutBg">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/publicIv"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/img_check" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/moments_public"
                            android:textColor="@color/colorDark"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/moments_public_desc"
                            android:textColor="@color/color999"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/privateLayout"
                    style="@style/layoutBg">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/privateIv"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/img_check" />


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/moments_private"
                            android:textColor="@color/colorDark"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/moments_private_desc"
                            android:textColor="@color/color999"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/partiallyLayout"
                    style="@style/layoutBg">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/partiallyIv"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/img_check" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/moments_partially_visible"
                            android:textColor="@color/colorDark"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/moments_partially_visible_desc"
                            android:textColor="@color/color999"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

                <com.chat.base.views.expandablelayout.ExpandableLayout
                    android:id="@+id/partiallyEb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:el_duration="200"
                    app:el_expanded="false"
                    app:el_parallax="0.5">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/partiallyMaillistLayout"
                            style="@style/layoutBg"
                            android:orientation="vertical"
                            android:paddingStart="50dp"
                            android:paddingTop="10dp"
                            android:paddingEnd="15dp"
                            android:paddingBottom="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/choose_by_maillist"
                                android:textColor="@color/color697A9F"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/partiallyMaillistNamesTv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="3dp"
                                android:textSize="14sp"
                                android:visibility="gone" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:layout_marginEnd="15dp"
                            android:background="@drawable/screen_bg"
                            android:orientation="vertical">

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/partiallyLabelRecyclerView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                        </LinearLayout>

                    </LinearLayout>
                </com.chat.base.views.expandablelayout.ExpandableLayout>


                <LinearLayout
                    android:id="@+id/invisibleLayout"
                    style="@style/layoutBg">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/invisibleIv"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/img_check_red" />


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/moments_invisible"
                            android:textColor="@color/colorDark"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/moments_invisible_desc"
                            android:textColor="@color/color999"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

                <com.chat.base.views.expandablelayout.ExpandableLayout
                    android:id="@+id/invisibleEb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:el_duration="200"
                    app:el_expanded="false"
                    app:el_parallax="0.5">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/invisibleMaillistLayout"
                            style="@style/layoutBg"
                            android:orientation="vertical"
                            android:paddingStart="50dp"
                            android:paddingTop="10dp"
                            android:paddingEnd="15dp"
                            android:paddingBottom="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/choose_by_maillist"
                                android:textColor="@color/color697A9F"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/invisibleMaillistNamesTv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="3dp"
                                android:textColor="@color/red"
                                android:textSize="14sp"
                                android:visibility="gone" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:layout_marginEnd="15dp"
                            android:orientation="vertical">

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/invisibelLabelRecyclerView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                        </LinearLayout>

                    </LinearLayout>
                </com.chat.base.views.expandablelayout.ExpandableLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>